<resources>
    <string name="app_name">Register Contacts</string>

    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dois">DoisActivity</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="login">Login</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register">insert Client</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone Number</string>
    <string name="redirectToList">Clients List</string>
    <string name="Save">save</string>
    <string name="btnCadastro">Insert Clients</string>
    <string name="required_field">Required Field!</string>
    <string name="addClient">Add Client</string>
    <string name="menuEdit">Edit Client</string>
    <string name="menuRemove">Remove Client</string>
    <string name="confirm">Confirm</string>
    <string name="yes">Yes</string>
    <string name="success">All right!</string>
    <string name="no">No!</string>
    <string name="cep">CEP</string>
    <string name="findCep">Find Zip Code</string>
    <string name="number">Number</string>
    <string name="tipoDeLogradouro">Tipo De Logradouro</string>
    <string name="logradouro">Logradouro</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="loading">Carregando....</string>
    <string name="complements">Complements</string>
</resources>

